🐛 Fix : validate CLI usage in README.md